--- a/are-back/src/main/resources/application.properties
+++ b/are-back/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=root
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
-
-
 spring.jpa.show-sql=true
+
+#Spring security
+spring.security.user.name=fenix
+spring.security.user.password=fenix
