--- a/are-back/src/main/resources/application.properties
+++ b/are-back/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #Spring security
-spring.security.user.name=fenix
-spring.security.user.password=fenix
+#spring.security.user.name=fenix
+#spring.security.user.password=fenix
+
+#logging.level.org.springframework.boot.autoconfigure=ERROR
