--- a/are-back/src/main/resources/application-dev.properties
+++ b/are-back/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/users
