--- a/are-bets/src/main/resources/application.properties
+++ b/are-bets/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=8081
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
@@ -12,8 +11,8 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#Spring security
-#spring.security.user.name=fenix
-#spring.security.user.password=fenix
-
-#logging.level.org.springframework.boot.autoconfigure=ERROR
+##Eureka config
+spring.application.name= are-bets
+server.port= 0
+eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress= true
