zull project and configuration

--- a/are-users/src/main/resources/application.properties
+++ b/are-users/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.jpa.show-sql=true
 #spring.security.user.password=fenix
 
 #logging.level.org.springframework.boot.autoconfigure=ERROR
+
+##Eureka config
+spring.application.name=are-users
+server.port=0
+eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress= true
